recursion.cons.lessons.recursion.cons.ButLast.scala.error
butLast:2: error: only classes can have declared but undefined members
(Note that variables need to be initialized to be defined)
var tableau:List[Int]
    ^butLast:5: error: value update is not a member of List[Int]
		tableau(i) = l(i)	
                ^